--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,9 @@
 local.properties
 .idea/workspace.xml
 .idea/libraries
-.DS_Store build
+.DS_Store 
+**/.DS_Store
+build
 **/build
 app/app.iml
 *.iml
