--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.androidhive.musicplayer"
+    package="com.pimusic"
     android:versionCode="1"
     android:versionName="1.0" >
 
@@ -15,7 +15,7 @@
         android:icon="@drawable/player"
         android:label="@string/app_name" >
         <activity
-            android:name=".AndroidBuildingMusicPlayerActivity"
+            android:name="com.pimusic.AndroidBuildingMusicPlayerActivity"
             android:configChanges="keyboardHidden|orientation"
             android:label="@string/app_name" >
             <intent-filter>
@@ -24,7 +24,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".PlayListActivity" />
+        <activity android:name="com.pimusic.PlayListActivity" />
     </application>
 
 </manifest><!-- AndroidBuildingMusicPlayerActivity -->
